--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             container.innerHTML = ''; // Clear any existing images
 
             const baseUrl = "https://gietuerp.in/StudentDocuments/";
-            const prefix = "22BAG"; // Prefix for the images
+            const prefix = "24BT"; // Prefix for the images
             const imgSuffix = ".JPG"; // Image file extension
             
             const startNumber = 1; // Starting number for images
